<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/student_info"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:text="@string/delete"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsert"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:text="@string/update"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:text="@string/view"
        android:backgroundTint="@color/design_default_color_secondary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        app:layout_constraintVertical_bias="0.084" />



</androidx.constraintlayout.widget.ConstraintLayout>